--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,20 @@
 body{
     margin: auto;
     width: 100%;
-    background-color: #1d1c19;
+    background-color: #646462;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-
+    display: flex;
+    justify-content: center;
 }
 .header_tag{
     font-size: inherit;
 }
+
+p{
+    font-size: 0.4em;
+    width: 90%;
+}
+
 #page_content{
     display: grid;
     grid-template-columns: repeat(10, 1fr);
@@ -16,7 +23,7 @@ body{
 
 #pageimage{   
     /* Mobile responsive property for image scaling */
-    max-width:100%;height:auto;
+    max-width:90%;height:auto;
 }
 
 h1, h2, h3 {
@@ -24,25 +31,29 @@ h1, h2, h3 {
     font-size: 5vw;
 }
 
-.header{
+#header{
     grid-area: 1 /1 / span 1 / span 10;
-    background-color: #ffffff;
     display: flex;
     justify-content: center;
     gap: 5%; 
+    height:50%;
+}
+
+#headerInner{
+    grid-area: 1 / 1 / span 1/ span 10;
+    flex-direction: column;
+    padding-left: 40%;
+    z-index: 1;
 }
 
 .main_area{
     grid-area: 2 /1 / span 1 / span 10;
     height: 85vh;
     width: 100%;    
-    border-top: 3px solid #000000;
-    border-bottom: 3px solid #000000;
-    /* background-color: rgb(109, 103, 96); */
     background-size:cover;
     background-position: center;
     justify-items: center;
     padding-left: 5%;
     font-size: 3em;
-    color: #4e8510;
+    color: #050505;
 }
