--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
     display: flex;
     justify-content: center;
+    
 }
 .header_tag{
     font-size: inherit;
@@ -18,17 +19,22 @@ p, ol, h4{
 #page_content{
     display: grid;
     grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: auto auto auto;      
+    grid-template-rows: auto auto auto;        
 }
 
 #pageimage{   
     /* Mobile responsive property for image scaling */
-    max-width:90%;height:auto;
+    max-width:90%;
+    height:auto;
 }
 
 h1, h2, h3 {
     /* Mobile responsive text size for headers */
-    font-size: 5vw;
+    font-size: 2vw;
+}
+
+.menuHead{
+    font-size: 5vw;    
 }
 
 #header{
@@ -36,24 +42,31 @@ h1, h2, h3 {
     display: flex;
     justify-content: center;
     gap: 5%; 
-    height:50%;
+    height:50%;    
+    width: 100vw;
+    text-align: center;
 }
 
 #headerInner{
     grid-area: 1 / 1 / span 1/ span 10;
     flex-direction: column;
-    padding-left: 40%;
-    z-index: 1;
+    z-index: 1;  
+    text-align: center;  
 }
 
 .main_area{
     grid-area: 2 /1 / span 1 / span 10;
-    height: 85vh;
-    width: 100%;    
+    margin: auto;
+    height: fit-content;
+    width: 90%;    
     background-size:cover;
     background-position: center;
     justify-items: center;
     padding-left: 5%;
     font-size: 3em;
     color: #050505;
+    border-radius: 10px;
+    border: 3px black solid;
+    background-color: whitesmoke;  
+    opacity: 0.75;  
 }
