--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,7 @@ body{
     background-color: #646462;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
     display: flex;
-    justify-content: center;
-    
+    justify-content: center;    
 }
 .header_tag{
     font-size: inherit;
@@ -40,11 +39,11 @@ h1, h2, h3 {
 #header{
     grid-area: 1 /1 / span 1 / span 10;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     gap: 5%; 
     height:50%;    
     width: 100vw;
-    text-align: center;
+    text-align: left;
 }
 
 #headerInner{
