--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 body{
     margin: auto;
     width: 100%;
-    background-color: #646462;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+    background-color: #DAE0E6;
+    font-family: 'Smooch Sans', sans-serif;
     display: flex;
     justify-content: center;    
+    
 }
 .header_tag{
     font-size: inherit;
@@ -29,12 +30,10 @@ p, ol, h4{
 
 h1, h2, h3 {
     /* Mobile responsive text size for headers */
-    font-size: 2vw;
+    font-size: 3vh;
 }
 
-.menuHead{
-    font-size: 5vw;    
-}
+
 
 #header{
     grid-area: 1 /1 / span 1 / span 10;
@@ -44,6 +43,12 @@ h1, h2, h3 {
     height:50%;    
     width: 100vw;
     text-align: left;
+    font-size: 8em;
+    border: 2px black solid;
+    border-radius: 5px;
+    display:flex;
+    width: min-content;
+    padding: 3px;
 }
 
 #headerInner{
@@ -66,6 +71,6 @@ h1, h2, h3 {
     color: #050505;
     border-radius: 10px;
     border: 3px black solid;
-    background-color: whitesmoke;  
-    opacity: 0.75;  
+    background-color: #e2dada;  
+    /* opacity: 0.75;   */
 }
