--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,7 @@ body{
     width: 100%;
     background-color: #DAE0E6;
     font-family: 'Smooch Sans', sans-serif;
-    display: flex;
-    justify-content: center;    
+    
     
 }
 .header_tag{
@@ -20,6 +19,7 @@ p, ol, h4{
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: auto auto auto;        
+    
 }
 
 #pageimage{   
@@ -48,6 +48,7 @@ h1, h2, h3 {
     border-radius: 5px;
     display:flex;
     width: min-content;
+    justify-self: left;
     padding: 3px;
 }
 
