--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body{
 p, ol, h4{
     font-size: 0.4em;
     width: 90%;
+    
 }
 
 #page_content{
@@ -56,7 +57,8 @@ h1, h2, h3 {
     grid-area: 1 / 1 / span 1/ span 10;
     flex-direction: column;
     z-index: 1;  
-    text-align: center;  
+    text-align: center; 
+    font-size: 1.4em; 
 }
 
 .main_area{
